@@ -27,7 +27,7 @@
 #endif
 
 #ifdef __WIN32__
-# define LIBTICABLES_VERSION "3.8.3"
+# define LIBTICABLES_VERSION "3.8.4"
 #else
 # define LIBTICABLES_VERSION VERSION
 #endif
