@@ -7,6 +7,10 @@ To do:
 
 Log:
 
+- 24/04/2004, version 3.8.4: roms
+	Added buffered write support to the SilverLink / Win32 module. Driver 3.0.2.1 
+	is needed. Tested with various transfers.
+
 - 21/04/2004, version 3.8.3: roms
 	Added full/partial BUFFERED_W (heuristic) support to get the best of
 	both worlds ! Tested with group, idlist, clock, backup, 
